# VmfExperimental

./: .gitignore  CMakeLists.txt  README.md
AFLPlusPlus/: CMakeLists.txt
AFLPlusPlus/docs/: README.md
AFLPlusPlus/src/module/: AFLCloneMutator.cpp  AFLCloneMutator.hpp  AFLDWordAddSubMutator.cpp  AFLDWordAddSubMutator.hpp  AFLDeleteMutator.cpp  AFLDeleteMutator.hpp  AFLFlip2BitMutator.cpp  AFLFlip2BitMutator.hpp  AFLFlip2ByteMutator.cpp  AFLFlip2ByteMutator.hpp  AFLFlip4BitMutator.cpp  AFLFlip4BitMutator.hpp  AFLFlip4ByteMutator.cpp  AFLFlip4ByteMutator.hpp  AFLFlipBitMutator.cpp  AFLFlipBitMutator.hpp  AFLFlipByteMutator.cpp  AFLFlipByteMutator.hpp  AFLInteresting16Mutator.cpp  AFLInteresting16Mutator.hpp  AFLInteresting32Mutator.cpp  AFLInteresting32Mutator.hpp  AFLInteresting8Mutator.cpp  AFLInteresting8Mutator.hpp  AFLOverwriteCopyMutator.cpp  AFLOverwriteCopyMutator.hpp  AFLOverwriteFixedMutator.cpp  AFLOverwriteFixedMutator.hpp  AFLRandomByteAddSubMutator.cpp  AFLRandomByteAddSubMutator.hpp  AFLRandomByteMutator.cpp  AFLRandomByteMutator.hpp  AFLSpliceMutator.cpp  AFLSpliceMutator.hpp  AFLWordAddSubMutator.cpp  AFLWordAddSubMutator.hpp  config.h
AFLPlusPlus/test/: README.md
Determinism/: CMakeLists.txt
Determinism/docs/: README.md
Determinism/test/config/: defaultModules_determinism.yaml
Determinism/vmf/src/: CMakeLists.txt
Determinism/vmf/src/modules/: CMakeLists.txt
Determinism/vmf/src/modules/common/feedback/: AFLDeterministicFeedback.cpp  AFLDeterministicFeedback.hpp
Determinism/vmf/src/modules/common/output/: DeterminismTesterOutput.cpp  DeterminismTesterOutput.hpp
Radamsa/: CMakeLists.txt  README.md
Radamsa/data/: README.md
Radamsa/src/common/mutator/: byteMutations.hpp  lineMutations.cpp
Radamsa/test/: RadamsaAsciiBadMutatorTest.cpp  RadamsaCopyLineCloseByMutatorTest.cpp  RadamsaDecrementByteMutatorTest.cpp  RadamsaDeleteByteSequenceMutatorTest.cpp  RadamsaDeleteLineMutatorTest.cpp  RadamsaDeleteNodeMutatorTest.cpp  RadamsaDeleteSequentialLinesMutatorTest.cpp  RadamsaDropByteMutatorTest.cpp  RadamsaDuplicateLineMutatorTest.cpp  RadamsaDuplicateNodeMutatorTest.cpp  RadamsaFlipByteMutatorTest.cpp  RadamsaFuseNextMutatorTest.cpp  RadamsaFuseOldMutatorTest.cpp  RadamsaFuseThisMutatorTest.cpp  RadamsaFuse_helpers.cpp  RadamsaFuse_helpers.hpp  RadamsaIncrementByteMutatorTest.cpp  RadamsaInsertByteMutatorTest.cpp  RadamsaInsertLineMutatorTest.cpp  RadamsaInsertUnicodeMutatorTest.cpp  RadamsaModifyTextNumberMutatorTest.cpp  RadamsaPermuteByteMutatorTest.cpp  RadamsaPermuteLinesMutatorTest.cpp  RadamsaRandomizeByteMutatorTest.cpp  RadamsaRepeatByteMutatorTest.cpp  RadamsaRepeatByteSequenceMutatorTest.cpp  RadamsaRepeatLineMutatorTest.cpp  RadamsaRepeatPathMutatorTest.cpp  RadamsaReplaceLineMutatorTest.cpp  RadamsaReplaceNodeMutatorTest.cpp  RadamsaSwapLineMutatorTest.cpp  RadamsaSwapNodesMutatorTest.cpp  RadamsaTreeMutatorBaseTest.cpp  RadamsaWidenCodePointMutatorTest.cpp  byteMutationTest.cpp  byteMutationTest.h  lineMutationTest.cpp  lineMutationTest.h  mutationBaseTest.cpp  mutationBaseTest.h  (+1 more)
Radamsa/test/config/: experimentalModules.yaml
Radamsa/vmf/src/: CMakeLists.txt
Radamsa/vmf/src/modules/: CMakeLists.txt
Radamsa/vmf/src/modules/common/mutator/: .byteMutations.hpp.swp  RadamsaAsciiBadMutator.cpp  RadamsaAsciiBadMutator.hpp  RadamsaByteMutatorBase.hpp  RadamsaCopyLineCloseByMutator.cpp  RadamsaCopyLineCloseByMutator.hpp  RadamsaDecrementByteMutator.cpp  RadamsaDecrementByteMutator.hpp  RadamsaDeleteByteSequenceMutator.cpp  RadamsaDeleteByteSequenceMutator.hpp  RadamsaDeleteLineMutator.cpp  RadamsaDeleteLineMutator.hpp  RadamsaDeleteNodeMutator.cpp  RadamsaDeleteNodeMutator.hpp  RadamsaDeleteSequentialLinesMutator.cpp  RadamsaDeleteSequentialLinesMutator.hpp  RadamsaDropByteMutator.cpp  RadamsaDropByteMutator.hpp  RadamsaDuplicateLineMutator.cpp  RadamsaDuplicateLineMutator.hpp  RadamsaDuplicateNodeMutator.cpp  RadamsaDuplicateNodeMutator.hpp  RadamsaFlipByteMutator.cpp  RadamsaFlipByteMutator.hpp  RadamsaFuseNextMutator.cpp  RadamsaFuseNextMutator.hpp  RadamsaFuseOldMutator.cpp  RadamsaFuseOldMutator.hpp  RadamsaFuseThisMutator.cpp  RadamsaFuseThisMutator.hpp  RadamsaIncrementByteMutator.cpp  RadamsaIncrementByteMutator.hpp  RadamsaInsertByteMutator.cpp  RadamsaInsertByteMutator.hpp  RadamsaInsertLineMutator.cpp  RadamsaInsertLineMutator.hpp  RadamsaInsertUnicodeMutator.cpp  RadamsaInsertUnicodeMutator.hpp  RadamsaLineMutatorBase.hpp  RadamsaModifyTextNumberMutator.cpp  (+34 more)
SamplePackage/: CMakeLists.txt  README.md
SamplePackage/vmf/src/: CMakeLists.txt
SamplePackage/vmf/src/modules/: CMakeLists.txt
SamplePackage/vmf/src/modules/common/mutator/: MyMutator.cpp  MyMutator.hpp
dockerfiles/: Dockerfile  Dockerfile.kali
test/: CMakeLists.txt
test/config/: experimentalModules.yaml
test/unittest/: CMakeLists.txt
